add test to verify if myfaces handles illegal xml characters properly